--- a/app/public/stylesheets/home.css
+++ b/app/public/stylesheets/home.css
@@ -85,7 +85,11 @@ h1 {
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 767px) {
+
+    * {
+        font-size: 14px;
+    }
 
     .main-genres {
 
