--- a/app/site/views/detail.ejs
+++ b/app/site/views/detail.ejs
@@ -16,9 +16,13 @@
           <div class="border border-warning resenias">
             <img class="w-100" src="/images/imagesColor/<%=result.title%>.jpg" alt="error">
           </div>
-          <div class="d-flex w-100 mt-3">
-            <a href="<%=result.freetogame_profile_url%>" target="_blank" class="btn btn-warning w-50 me-1">FREE</a>
-            <a href="<%=result.game_url%>" target="_blank" class="btn btn-warning w-50">PLAY NOW</a>
+          <div class="mt-3">
+            <div class="row  justify-content-around">
+              <a href="<%=result.freetogame_profile_url%>" target="_blank"
+                class="btn btn-warning col-12 col-sm-12 col-md-5 col-lg-5 mt-2">FREE</a>
+              <a href="<%=result.game_url%>" target="_blank"
+                class="btn btn-warning col-12 col-sm-12 col-md-6 col-lg-6 mt-2">PLAY NOW</a>
+            </div>
           </div>
         </div>
       </div>
